--- a/smb.conf
+++ b/smb.conf
@@ -4,7 +4,7 @@
 	printcap name = /dev/null
 	disable spoolss = yes
 	map to guest = bad user
-
+	guest account = 1000
 [public]
 	path = /srv
 	guest ok = yes
